--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -49,21 +49,31 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <h1>AFRICA CALLING <br><span>TEXTILE MANUFACTURERS</span> </h1>
             <div class="split">
                 <div class="left">
-                    <p>Unlock Your Gateway to a <br>
-                        <span>$1.11 Trillion</span> Economy with:
-                    </p>
+                    <p>Unlock your gateway to an ultimate textile frontier</p>
                     <div class="tiles">
                         <div>
-                            <img src="./assets/export.svg" alt="Export-Ready Infrastructure">
-                            <p>Export Ready <br>Infrastructure</p>
+                            <img src="./assets/forecast.png" alt="Export-Ready Infrastructure">
+                            <p><span style="font-weight: 800;">$1.61Tn 2033</span> Market Forecast</p>
                         </div>
                         <div>
-                            <img src="./assets/fda.svg" alt="FDA Compliance">
-                            <p>FDA <br>Compliance</p>
+                            <img src="./assets/import.png" alt="FDA Compliance">
+                            <p>Over <span style="font-weight: 800;">$40Bn</span> Annual Textile Imports</p>
                         </div>
                         <div>
-                            <img src="./assets/single.svg" alt="Single-Window Clearance">
-                            <p>Single Window <br>Clearance</p>
+                            <img src="./assets/export.png" alt="Single-Window Clearance">
+                            <p>Apparel Exports Growing <span style="font-weight: 800;">at 7.46% CAGR</span></p>
+                        </div>
+                        <div>
+                            <img src="./assets/consumer-base.png" alt="Single-Window Clearance">
+                            <p>Young Growing Consumer Base</p>
+                        </div>
+                        <div>
+                            <img src="./assets/sources.png" alt="Single-Window Clearance">
+                            <p>H&M, Zara, Kiabi, Children’s Place Already Sourcing</p>
+                        </div>
+                        <div>
+                            <img src="./assets/clearance.png" alt="Single-Window Clearance">
+                            <p>Single-Window Clearance</p>
                         </div>
                     </div>
                 </div>
@@ -105,7 +115,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="left">
             <h2>Africa's Edge in
                 Manufacturing</h2>
-            <p>With a rapidly expanding global market, growing demand from international brands, access to raw materials, and competitive production economics, Africa’s textiles and apparel sector is moving into a new phase of manufacturing maturity!</p>
+            <p>With a rapidly expanding global market, growing demand from international brands, access to domestically available cotton and significantly lower manpower costs than traditional hubs like Vietnam and China, manufacturers gain a decisive pricing edge in Africa.
+                </p>
+                <br>
+                <p>Combined with duty-free access to EU and US and nearly 50% faster lead times than South Asian competitors, your next manufacturing empire in Africa is positioned for global dominance.
+                    </p>
         </div>
         <div class="right">
             <div class="chips">
@@ -127,7 +141,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
             <div class="leftpop pop">
                 <p class="pop1">
-                    Vertical <br> Integration
+                    No Import Duty <br> on Raw Materials
                 </p>
             </div>
             <div class="leftpop pop">
@@ -137,12 +151,22 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
             <div class="rightpop pop">
                 <p class="pop3">
-                    Abundant <br>Raw Materials
+                    Subsidised <br>Labour Costs
                 </p>
             </div>
             <div class="rightpop pop">
                 <p class="pop4">
-                    Duty-Free <br> Export Access
+                    Reliable Power <br> & Natural Gas
+                </p>
+            </div>
+            <div class="rightpop pop">
+                <p class="pop5">
+                    Duty-Free <br>Export Access
+                </p>
+            </div>
+            <div class="rightpop pop">
+                <p class="pop6">
+                    No Corporate <br> Income Tax
                 </p>
             </div>
         </div>
@@ -160,22 +184,22 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 </div>
                 <div>
                     <p>Textile <br> Recycling </p>
-                    <img src="./assets/recycle_icon.png" alt="spinning">
+                    <img src="./assets/textile-recycling.png" alt="spinning">
                 </div>
                 <div>
                     <p>Weaving</p>
-                    <img src="./assets/weaving_icon.png" alt="spinning">
+                    <img src="./assets/weaving.png" alt="spinning">
                 </div>
                 <div>
-                    <p>Garmenting <br> Accessories </p>
-                    <img src="./assets/garmenting_icon.png" alt="Stitching Machine">
+                    <p>Garmenting &<br> Accessories </p>
+                    <img src="./assets/garmenting_accessories.png" alt="Stitching Machine">
                 </div>
                 <div>
                     <p>Knitting</p>
                     <img src="./assets/knitting.png" alt="Knitting">
                 </div>
                 <div>
-                    <p>Processing<br>
+                    <p>Processing/<br>
                         Dyeing </p>
                     <img src="./assets/dyeing.png" alt="Dyeing">
                 </div>
@@ -440,7 +464,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     // formData.append('country', '91');
                     formData.append('form_type', '1');
                     formData.append('investment_specialist', '');
-                    formData.append('lead_type', '10');
+                    formData.append('lead_type', '11');
                     formData.append('region', '');
                     formData.append('city', '');
                     formData.append('loc', '');
