--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -159,7 +159,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     Reliable Power <br> & Natural Gas
                 </p>
             </div>
-            <div class="rightpop pop">
+            <div class="leftpop pop">
                 <p class="pop5">
                     Duty-Free <br>Export Access
                 </p>
