--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -49,7 +49,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <h1>AFRICA CALLING <br><span>TEXTILE MANUFACTURERS</span> </h1>
             <div class="split">
                 <div class="left">
-                    <p>Unlock your gateway to an ultimate textile frontier</p>
+                    <p>Unlock your gateway to the ultimate textile frontier</p>
                     <div class="tiles">
                         <div>
                             <img src="./assets/forecast.png" alt="Export-Ready Infrastructure">
@@ -135,7 +135,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <img src="./assets/cotton9.webp" alt="chips" class="chipsImage imgg9">
             </div>
             <div class='projected'>
-                <p>Projected market Size</p>
+                <p>Projected Market Size</p>
                 <h3>$ 1.61 Tn</h3>
                 <p>2033 Forecast</p>
             </div>
