--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
-    <title>Invest in Snack Manufacturing Business in Africa | SEZs, FDI</title>
+    <title>Africa Calling Textile Manufacturers | Export-Ready SEZs</title>
     <meta name="description"
-        content="Invest in Africa’s booming snack manufacturing sector. Set up business in Arise IIP SEZs with incentives, modern infrastructure, and vast consumer demand.">
+        content="Set up your textile manufacturing business in Africa with export-ready infrastructure, duty-free access to EU & US, low labour costs and single-window clearance.">
     <meta property="og:image" content="./assets/third_background.webp" />
     <link rel="icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
     <link rel="shortcut icon" href="https://africaforinvestors.com/static/front/assets/favicon_arise.png" type="image/x-icon/png">
