--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -42,7 +42,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 <body>
     <section id="home">
 
-        <img src="./assets/textile_banner.jpg" alt="homepage" class="backLayer">
+        <img src="./assets/african-textile-manufacturin.jpg" alt="homepage" class="backLayer">
         <div class="layer"></div>
         <div class="content">
             <img src="./assets/afi-logo.svg" alt="logo" class="logo">
@@ -54,6 +54,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                         <div>
                             <img src="./assets/forecast.png" alt="Export-Ready Infrastructure">
                             <p><span style="font-weight: 800;">$1.61Tn 2033</span> Market Forecast</p>
+                        </div>
+                        <div>
+                            <img src="./assets/cotton_icon.png" alt="Export-Ready Infrastructure">
+                            <p>Contributing 5-6% of <span style="font-weight: 800;"> Global Cotton Output</span></p>
                         </div>
                         <div>
                             <img src="./assets/import.png" alt="FDA Compliance">
@@ -71,10 +75,10 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             <img src="./assets/sources.png" alt="Single-Window Clearance">
                             <p>H&M, Zara, Kiabi, Children’s Place Already Sourcing</p>
                         </div>
-                        <div>
+                        <!-- <div>
                             <img src="./assets/clearance.png" alt="Single-Window Clearance">
                             <p>Single-Window Clearance</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="form">
@@ -98,7 +102,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                             </div>
                             <div>
                                 <input checked type="checkbox" id="terms" name="terms">
-                                <label for="terms">I agree to the AFI privacy policy.*</label>
+                                <label for="terms">I agree to the AFI <a target="_blank" href="https://africaforinvestors.com/privacy-policy">privacy policy.*</a> </label>
                             </div>
                         </div>
                         <div class="sec">
@@ -122,24 +126,27 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </p>
         </div>
         <div class="right">
+            <div style="width: 100%; height: 100%;position: relative;overflow: hidden;z-index: 1;">
+                <img class="image_right" src="./assets/new-a-a.jpg" alt="">
+            </div>
             <div class="chips">
                 <img src="./assets/arrow.svg" alt="arrow" class="arrow">
-                <img src="./assets/cotton1.webp" alt="chips" class="chipsImage imgg1">
+                <!-- <img src="./assets/cotton1.webp" alt="chips" class="chipsImage imgg1">
                 <img src="./assets/cotton2.webp" alt="chips" class="chipsImage imgg2">
                 <img src="./assets/cotton3.webp" alt="chips" class="chipsImage imgg3">
                 <img src="./assets/cotton4.webp" alt="chips" class="chipsImage imgg4">
                 <img src="./assets/cotton5.webp" alt="chips" class="chipsImage imgg5">
                 <img src="./assets/cotton6.webp" alt="chips" class="chipsImage imgg6">
                 <img src="./assets/cotton7.webp" alt="chips" class="chipsImage imgg7">
-                <img src="./assets/cotton8.webp" alt="chips" class="chipsImage imgg8">
-                <img src="./assets/cotton9.webp" alt="chips" class="chipsImage imgg9">
+                <img src="./assets/cotton8.webp" alt="chips" class="chipsImage imgg8"> -->
+                <!-- <img src="./assets/cotton9.webp" alt="chips" class="chipsImage imgg9"> -->
             </div>
             <div class='projected'>
                 <p>Projected Market Size</p>
                 <h3>$ 1.61 Tn</h3>
                 <p>2033 Forecast</p>
             </div>
-            <div class="leftpop pop">
+            <!-- <div class="leftpop pop">
                 <p class="pop1">
                     No Import Duty <br> on Raw Materials
                 </p>
@@ -168,7 +175,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <p class="pop6">
                     No Corporate <br> Income Tax
                 </p>
-            </div>
+            </div>  -->
         </div>
     </section>
 
@@ -275,7 +282,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </div>
         </div>
         <div class="copy">
-            <p>Copyright@2025 Arise IIP Pvt. Ltd. All rights reserved.</p>
+            <p>Copyright@2026 Arise IIP Pvt. Ltd. All rights reserved.</p>
         </div>
     </section>
 
