--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -127,24 +127,24 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         </div>
         <div class="right">
             <div style="width: 100%; height: 100%;position: relative;overflow: hidden;z-index: 1;">
-                <img class="image_right" src="./assets/new-a-a.jpg" alt="">
+                <img class="image_right" src="./assets/machinery-equipment-workshop-production-thread-ndustrial-textile-factory.jpg" alt="">
             </div>
-            <div class="chips">
+            <!-- <div class="chips">
                 <img src="./assets/arrow.svg" alt="arrow" class="arrow">
-                <!-- <img src="./assets/cotton1.webp" alt="chips" class="chipsImage imgg1">
+                <img src="./assets/cotton1.webp" alt="chips" class="chipsImage imgg1">
                 <img src="./assets/cotton2.webp" alt="chips" class="chipsImage imgg2">
                 <img src="./assets/cotton3.webp" alt="chips" class="chipsImage imgg3">
                 <img src="./assets/cotton4.webp" alt="chips" class="chipsImage imgg4">
                 <img src="./assets/cotton5.webp" alt="chips" class="chipsImage imgg5">
                 <img src="./assets/cotton6.webp" alt="chips" class="chipsImage imgg6">
                 <img src="./assets/cotton7.webp" alt="chips" class="chipsImage imgg7">
-                <img src="./assets/cotton8.webp" alt="chips" class="chipsImage imgg8"> -->
-                <!-- <img src="./assets/cotton9.webp" alt="chips" class="chipsImage imgg9"> -->
-            </div>
+                <img src="./assets/cotton8.webp" alt="chips" class="chipsImage imgg8">
+                <img src="./assets/cotton9.webp" alt="chips" class="chipsImage imgg9">
+            </div> -->
             <div class='projected'>
-                <p>Projected Market Size</p>
-                <h3>$ 1.61 Tn</h3>
-                <p>2033 Forecast</p>
+                <p>~50% Faster </p>
+                <h3>lead times</h3>
+                <p>than South Asia</p>
             </div>
             <!-- <div class="leftpop pop">
                 <p class="pop1">
