--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -273,7 +273,11 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
     <section id="footer">
         <div class="foot">
-            <img src="./assets/afi-logo.svg" alt="afi logo">
+            <div>
+                <img style="height: clamp(3.75rem, -5.1786rem + 9.5238vw, 6.25rem);" src="./assets/afi-logo.svg" alt="afi logo">
+                <p style="font-size: var(--font-24);margin-top: 10px;text-align: right;">Powered By</p>
+            </div>
+            <img src="./assets/whiteLogo.png" alt="arise logo">
             <div>
                 <p>Our Presence across</p>
                 <div>India | China | Vietnam | UAE | GABON | TOGO | BENIN | COTE D'IVOIRE | NIGERIA | CONGO | REPUBLIC
