--- a/africa-calling-textile-manufactures/index.html
+++ b/africa-calling-textile-manufactures/index.html
@@ -273,13 +273,15 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
     <section id="footer">
         <div class="foot">
-            <div>
-                <img style="height: clamp(3.75rem, -5.1786rem + 9.5238vw, 6.25rem);" src="./assets/afi-logo.svg" alt="afi logo">
-                <p style="font-size: var(--font-24);margin-top: 10px;text-align: right;">Powered By</p>
+            <div class="afi_logo">
+                <img  style="height: clamp(3.75rem, -2.9464rem + 7.1429vw, 5.625rem);justify-content: center" src="./assets/afi-logo.svg" alt="afi logo">
             </div>
-            <img src="./assets/whiteLogo.png" alt="arise logo">
             <div>
-                <p>Our Presence across</p>
+                <p class="powered_by" style="font-size: var(--font-24);text-align: right;">Powered By</p>
+                <img src="./assets/whiteLogo.png" alt="arise logo">
+            </div>
+            <div>
+                <p class="presence_across">Our Presence across</p>
                 <div>India | China | Vietnam | UAE | GABON | TOGO | BENIN | COTE D'IVOIRE | NIGERIA | CONGO | REPUBLIC
                     OF
                     CONGO | RWANDA | TANZANIA | KENYA | MALAWI | CHAD | Sierra Leone </div>
